--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 
-<html>
+<html class="no-js" lang="en">
 
 <head>
+
+  <meta charset="utf-8">
+  <meta content="ie=edge" http-equiv="x-ua-compatible">
+
   <title>antara</title>
 
-  <link rel = "stylesheet" type = "text/css" href = "./css/style.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <script src="https://www.google.com/jsapi" type="text/javascript"></script>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" media="(orientation: landscape)" href="css/landing-landscape.css">
+  <link rel="stylesheet" media="(orientation: portrait)" href="css/landing-portrait.css">
 
 
   <link rel="icon" type="image/png" href="" sizes="16x16">
@@ -30,38 +33,13 @@
 
 <div class=grid-container>
 
-<div class=main>
-
-  <img src="img/Tree1.png" alt="tree icon" class="tree-icon">
-
-    <div class=form>
-
-      <div class=grid-container-2>
-      <div id="box">
-        <script src="./js/main-2.js" type="text/javascript"></script>
-        <div id="table">
-        </div>
-      </div>
-      </div>
-
-    <h3>What happens next? Just a few sentences, please.<br><br></h3>
-
-      <form action="https://docs.google.com/forms/d/e/1FAIpQLSfrLRpiAX20xc_S7zmwdDiPgmBEVXcBSAs5xk3IOBNqypP1hQ/formResponse">
-        <input  name="entry.970193348" type="text" placeholder="&nbsp Continue the story here..." class="input-box"/>
-
-      <input class="submit-button" type="submit" value="submit">
-
-    </div>
+  <div class=videoWrapper>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ENob8KUg0-4" ytp-title-disable-channel-logo frameborder="0" modestbranding="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
   </div>
 
 </div>
 
-  <script
-   src="https://code.jquery.com/jquery-3.2.1.min.js"
-   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-   crossorigin="anonymous"></script>
-
-<script src='./js/main.js'></script>
+  <p align=center><a href="index.html">Tell us how it goes.</a></p>
 
 </body>
 
