--- a/input.html
+++ b/input.html
@@ -18,7 +18,7 @@
 
   <meta name="description" content="">
 
-  <meta property="og:title" content="antara">
+  <meta property="og:title" content="Antaranya">
   <meta property="og:description" content="">
   <meta property="og:image" content="">
   <meta property="og:url" content="">
