--- a/between.html
+++ b/between.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="en">
 
 <head>
-  <title>antara</title>
+  <title>Antara</title>
 
   <link rel = "stylesheet" type = "text/css" href = "./css/between.css"/>
 
