--- a/input.html
+++ b/input.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>antara</title>
+  <title>Antara</title>
 
   <link rel = "stylesheet" type = "text/css" href = "./css/style.css"/>
   <link href="css/normalize.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 
   <meta name="description" content="">
 
-  <meta property="og:title" content="Antaranya">
+  <meta property="og:title" content="Antara">
   <meta property="og:description" content="">
   <meta property="og:image" content="">
   <meta property="og:url" content="">
