--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="ie=edge" http-equiv="x-ua-compatible">
 
-  <title>antara</title>
+  <title>Antara</title>
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 
   <meta name="description" content="">
 
-  <meta property="og:title" content="Antaranya">
+  <meta property="og:title" content="Antara">
   <meta property="og:description" content="">
   <meta property="og:image" content="">
   <meta property="og:url" content="">
