Adjust landscape and portrait

--- a/input.html
+++ b/input.html
@@ -5,7 +5,8 @@
 <head>
   <title>Antara</title>
 
-  <link rel = "stylesheet" type = "text/css" href = "./css/style.css"/>
+  <link rel="stylesheet" media="(orientation: landscape)" href="css/style-landscape.css">
+  <link rel="stylesheet" media="(orientation: portrait)" href="css/style-portrait.css">
   <link href="css/normalize.css" rel="stylesheet">
   <script src="https://www.google.com/jsapi" type="text/javascript"></script>
 
