--- a/list.html
+++ b/list.html
@@ -11,7 +11,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/list.css" rel="stylesheet">
+  <link rel="stylesheet" media="(orientation: landscape)" href="css/list-landscape.css">
+  <link rel="stylesheet" media="(orientation: portrait)" href="css/list-portrait.css">
   <script src="https://www.google.com/jsapi" type="text/javascript"></script>
 
 
@@ -32,7 +33,7 @@
 <body>
 
 <div class=grid-container>
-  <h3>May life give you many reasons to smile.<h3>
+  <h1>May life give you many reasons to smile.<h1>
 </div>
 
 
