Updated Form, favicons

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <link rel="stylesheet" media="(orientation: portrait)" href="css/landing-portrait.css">
 
 
-  <link rel="icon" type="image/png" href="" sizes="16x16">
-  <link rel="icon" type="image/png" href="" sizes="32x32">
-  <link rel="icon" type="image/png" href="" sizes="96x96">
+  <link rel="icon" type="image/png" href="img/icons/favicon16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="img/icons/favicon32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="img/icons/favicon96.png" sizes="96x96">
 
-  <meta name="description" content="">
+  <meta name="description" content="Tell us how it goes.">
 
   <meta property="og:title" content="Antara">
-  <meta property="og:description" content="">
-  <meta property="og:image" content="">
+  <meta property="og:description" content="Tell us how it goes.">
+  <meta property="og:image" content="img/tree1.png">
   <meta property="og:url" content="">
   <meta name="twitter:card" content="">
 
