--- a/input.html
+++ b/input.html
@@ -13,15 +13,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <link rel="icon" type="image/png" href="" sizes="16x16">
-  <link rel="icon" type="image/png" href="" sizes="32x32">
-  <link rel="icon" type="image/png" href="" sizes="96x96">
+  <link rel="icon" type="image/png" href="img/icons/favicon16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="img/icons/favicon32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="img/icons/favicon96.png" sizes="96x96">
 
-  <meta name="description" content="">
+  <meta name="description" content="Tell us how it goes.">
 
   <meta property="og:title" content="Antara">
-  <meta property="og:description" content="">
-  <meta property="og:image" content="">
+  <meta property="og:description" content="Tell us how it goes.">
+  <meta property="og:image" content="img/tree1.png">
   <meta property="og:url" content="">
   <meta name="twitter:card" content="">
 
@@ -47,8 +47,8 @@
 
     <h3>What happens next? Just a few sentences, please.<br><br></h3>
 
-      <form action="https://docs.google.com/forms/d/e/1FAIpQLSfrLRpiAX20xc_S7zmwdDiPgmBEVXcBSAs5xk3IOBNqypP1hQ/formResponse">
-        <input  name="entry.970193348" type="text" placeholder="&nbsp Continue the story here..." class="input-box"/>
+      <form action="https://docs.google.com/forms/d/e/1FAIpQLSel1IoZGzLS5nb_6-yq6SNaglOx_Q8zh-Av05Tpj6eLPCSNDQ/formResponse">
+        <input  name="entry.1875244987" type="text" placeholder="&nbsp Continue the story here..." class="input-box"/>
 
       <input class="submit-button" type="submit" value="submit">
 
