Input fix attempt 1

--- a/input.html
+++ b/input.html
@@ -49,8 +49,7 @@
 
       <form action="https://docs.google.com/forms/d/e/1FAIpQLSeSb4CABSJlqb_chGTWTez4MB_tkhzOkdkzjNFxQBGuJH7BgQ/formResponse">
         <input  name="entry.93137924" type="text" placeholder="&nbsp Continue the story here..." class="input-box"/>
-
-      <input class="submit-button" type="submit" value="submit">
+      <input class="button" type="submit" value="submit">
 
     </div>
   </div>
