--- a/input.html
+++ b/input.html
@@ -48,8 +48,12 @@
     <h3>What happens next? Just a few sentences, please.<br><br></h3>
 
       <form action="https://docs.google.com/forms/d/e/1FAIpQLSeSb4CABSJlqb_chGTWTez4MB_tkhzOkdkzjNFxQBGuJH7BgQ/formResponse">
-        <input  name="entry.93137924" type="text" placeholder="&nbsp Continue the story here..." id="comfort"/>
-      <input class="button" type="submit" value="Submit">
+
+        <textarea name="entry.93137924" placeholder="&nbsp Continue the story here..." id="explain"/></textarea>
+
+        <input class="button" type="submit" value="Submit">
+
+      </form>
 
     </div>
   </div>
