--- a/input.html
+++ b/input.html
@@ -47,7 +47,7 @@
 
     <h3>What happens next? Just a few sentences, please.<br><br></h3>
 
-      <form action="https://docs.google.com/forms/d/e/1FAIpQLSeSb4CABSJlqb_chGTWTez4MB_tkhzOkdkzjNFxQBGuJH7BgQ/formResponse">
+      <form action="https://docs.google.com/forms/d/e/1FAIpQLSeSb4CABSJlqb_chGTWTez4MB_tkhzOkdkzjNFxQBGuJH7BgQ/formResponse" target="no-target">
 
         <textarea name="entry.93137924" placeholder="&nbsp Continue the story here..." id="explain"/></textarea>
 
