--- a/input.html
+++ b/input.html
@@ -47,9 +47,9 @@
 
     <h3>What happens next? Just a few sentences, please.<br><br></h3>
 
-      <iframe id="no-target" name="no-target" style="visibility:hidden"></iframe>
+      <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/thanks.html';}"></iframe>
 
-      <form action="https://docs.google.com/forms/d/e/1FAIpQLSeSb4CABSJlqb_chGTWTez4MB_tkhzOkdkzjNFxQBGuJH7BgQ/formResponse" target="no-target">
+      <form action="https://docs.google.com/forms/d/e/1FAIpQLSeSb4CABSJlqb_chGTWTez4MB_tkhzOkdkzjNFxQBGuJH7BgQ/formResponse" target="hidden_iframe" onsubmit="submitted=true;">
 
         <textarea name="entry.93137924" placeholder="&nbsp Continue the story here..." id="explain"/></textarea>
 
