--- a/input.html
+++ b/input.html
@@ -49,11 +49,11 @@
 
     <h3>What happens next? Just a few sentences, please.<br><br></h3>
 
-      <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/thanks.html';}"></iframe>
+      <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/list.html';}"></iframe>
 
-      <form action="https://docs.google.com/forms/d/e/1FAIpQLSeSb4CABSJlqb_chGTWTez4MB_tkhzOkdkzjNFxQBGuJH7BgQ/formResponse" target="hidden_iframe" onsubmit="submitted=true;">
+      <form action="https://docs.google.com/forms/d/e/1FAIpQLSdKvZ0h8a1Up47jhM38gRJI7BAjwLlVBqHrvd6d6pR06bjOxA/formResponse" target="hidden_iframe" onsubmit="submitted=true;">
 
-        <textarea name="entry.93137924" placeholder="&nbsp Continue the story here..." id="explain"/></textarea>
+        <textarea name="entry.727662626" placeholder="&nbsp Continue the story here..." id="explain"/></textarea>
 
         <input class="button" type="submit" value="Submit">
 
