--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 </div>
 
-  <p align=center><a href="input.html">Tell us how it goes.</a></p>
+  <p align=center><a href="input.html">Continue</a></p>
 
 </body>
 
