--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       </div>
 
-    <h3>What happens next? Just a few sentences, please.<br><br></h3>
+    <h3>What happens next? Don't be shy. Tell a story.<br><br></h3>
 
       <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/list.html';}"></iframe>
 
